optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_hoisted_fn_signal_in_loop.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { component$ } from '@qwik.dev/core';

export const App = component$(() => {
  const data = { value: [
    { value: { id: 1, selected: { value: true } } },
    { value: { id: 2, selected: { value: false } } },
    { value: { id: 3, selected: { value: true } } }
  ]};
  
  return (
    <table>
      {data.value.map((row) => {
        return (
          <tr
            key={row.value.id}
            class={row.value.selected.value ? "danger" : ""}
          >
            <td>{row.value.id}</td>
          </tr>
        );
      })}
    </table>
  );
});

============================= test.tsx ==

import { componentQrl, qrl } from "@qwik.dev/core";
const i_ckEPmXZlub0 = ()=>import("./test.tsx_App_component_ckEPmXZlub0");
const _hf0 = (p0)=>p0.value.id;
const _hf0_str = "p0.value.id";
const _hf1 = (p0)=>p0.value.selected.value ? "danger" : "";
const _hf1_str = "p0.value.selected.value?`danger`:``";
const _hf2 = (p0)=>p0.value.id;
const _hf2_str = "p0.value.id";
export const App = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_ckEPmXZlub0, "App_component_ckEPmXZlub0"));


None
============================= test.tsx_App_component_ckEPmXZlub0.tsx (ENTRY POINT)==

import { _fnSignal, _jsxSorted } from "@qwik.dev/core";
export const App_component_ckEPmXZlub0 = ()=>{
	const data = { value: [
		{ value: {
			id: 1,
			selected: { value: true }
		} },
		{ value: {
			id: 2,
			selected: { value: false }
		} },
		{ value: {
			id: 3,
			selected: { value: true }
		} }
	] };
	return /*#__PURE__*/ _jsxSorted("table", null, null, data.value.map((row)=>{
		return /*#__PURE__*/ _jsxSorted("tr", { class: _fnSignal(_hf1, [row], _hf1_str) }, null, /*#__PURE__*/ _jsxSorted("td", null, null, _fnSignal(_hf2, [row], _hf2_str), 1, null), 3, _fnSignal(_hf0, [row], _hf0_str));
	}), 1, null);
};


None
/*
{
  "origin": "test.tsx",
  "name": "App_component_ckEPmXZlub0",
  "entry": null,
  "displayName": "test.tsx_App_component",
  "hash": "ckEPmXZlub0",
  "canonicalFilename": "test.tsx_App_component_ckEPmXZlub0",
  "path": "",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    76,
    561
  ]
}
*/
== DIAGNOSTICS ==

[]
