optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_impure_template_fns.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { component$, useSignal } from '@qwik.dev/core';
const useFoo = (count) => {
	const tag = (s) => {
		const value = typeof s === "string" ? s : s[0];
		return \`\${value}-\${count.value}\`;
	}
	return tag;
}

export default component$(() => {
	const count = useSignal(0);
	const foo = useFoo(count);
	return (
		<>
			<p>{foo("test")}</p>
			<p>{foo\`test\`}</p>
			<button onClick$={() => count.value++}>Count up</button>
		</>
	);
});

============================= impure_template_fns.tsx ==



None
== DIAGNOSTICS ==

[]
