optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_issue_117.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==


export const cache = patternCache[cacheKey] || (patternCache[cacheKey]={});

============================= project/test.tsx ==

export const cache = patternCache[cacheKey] || (patternCache[cacheKey] = {});


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/project/test.tsx\"],\"names\":[],\"mappings\":\"AACA,OAAO,MAAM,QAAQ,YAAY,CAAC,SAAS,IAAI,CAAC,YAAY,CAAC,SAAS,GAAC,CAAC,CAAC,EAAE\"}")
== DIAGNOSTICS ==

[]
