optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_issue_150.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { component$, $ } from '@qwik.dev/core';
import { hola } from 'sdfds';

export const Greeter = component$(() => {
	const stuff = useStore();
	return $(() => {
		return (
			<div
				class={{
					'foo': true,
					'bar': stuff.condition,
					'baz': hola ? 'true' : 'false',
				}}
			/>
		)
	});
});

const d = $(()=>console.log('thing'));

============================= test.tsx_test_d_u48MVt0PaS8.js (ENTRY POINT)==

export const test_d_u48MVt0PaS8 = ()=>console.log("thing");


None
/*
{
  "origin": "test.tsx",
  "name": "test_d_u48MVt0PaS8",
  "entry": null,
  "displayName": "test_d",
  "hash": "u48MVt0PaS8",
  "canonicalFilename": "test.tsx_test_d_u48MVt0PaS8",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "$",
  "captures": false,
  "loc": [
    321,
    345
  ]
}
*/
============================= test.tsx_test_Greeter_component_ypCtrRwcmFs.js (ENTRY POINT)==

import { qrl } from "@qwik.dev/core";
export const test_Greeter_component_ypCtrRwcmFs = ()=>{
	const stuff = useStore();
	return /*#__PURE__*/ qrl(i_9YpoUAEQprM, "test_Greeter_component_1_9YpoUAEQprM", [stuff]);
};


None
/*
{
  "origin": "test.tsx",
  "name": "test_Greeter_component_ypCtrRwcmFs",
  "entry": null,
  "displayName": "test_Greeter_component",
  "hash": "ypCtrRwcmFs",
  "canonicalFilename": "test.tsx_test_Greeter_component_ypCtrRwcmFs",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    113,
    305
  ]
}
*/
============================= test.js ==

import { componentQrl, qrl } from "@qwik.dev/core";
const i_9YpoUAEQprM = ()=>import("./test.tsx_test_Greeter_component_1_9YpoUAEQprM");
const i_ypCtrRwcmFs = ()=>import("./test.tsx_test_Greeter_component_ypCtrRwcmFs");
const i_u48MVt0PaS8 = ()=>import("./test.tsx_test_d_u48MVt0PaS8");
export const Greeter = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_ypCtrRwcmFs, "test_Greeter_component_ypCtrRwcmFs"));
/*#__PURE__*/ qrl(i_u48MVt0PaS8, "test_d_u48MVt0PaS8");


None
============================= test.tsx_test_Greeter_component_1_9YpoUAEQprM.js (ENTRY POINT)==

import { _jsxSorted } from "@qwik.dev/core";
import { hola } from "sdfds";
export const test_Greeter_component_1_9YpoUAEQprM = ()=>{
	const [stuff] = useLexicalScope();
	return /*#__PURE__*/ _jsxSorted("div", { class: {
		"foo": true,
		"bar": stuff.condition,
		"baz": hola ? "true" : "false"
	} }, null, null, 3, null);
};


None
/*
{
  "origin": "test.tsx",
  "name": "test_Greeter_component_1_9YpoUAEQprM",
  "entry": null,
  "displayName": "test_Greeter_component_1",
  "hash": "9YpoUAEQprM",
  "canonicalFilename": "test.tsx_test_Greeter_component_1_9YpoUAEQprM",
  "path": "",
  "extension": "js",
  "parent": "component",
  "ctxKind": "function",
  "ctxName": "$",
  "captures": true,
  "loc": [
    158,
    301
  ]
}
*/
== DIAGNOSTICS ==

[]
