optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_issue_5008.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { component$, useStore } from "@qwik.dev/core";

export default component$(() => {
const store = useStore([{ value: 0 }]);
return (
	<>
	<button onClick$={() => store[0].value++}>+1</button>
	{store.map(function (v, idx) {
		return <div key={"fn_" + idx}>Function: {v.value}</div>;
	})}
	{store.map((v, idx) => (
		<div key={"arrow_" + idx}>Arrow: {v.value}</div>
	))}
	</>
);
});

============================= test.tsx_component_ZUK1E201Ins.tsx (ENTRY POINT)==

import { _jsxSorted, qrl, useStore } from "@qwik.dev/core";
import { Fragment as _Fragment } from "@qwik.dev/core/jsx-runtime";
const i_onClick = ()=>import("./test.tsx");
export const component_ZUK1E201Ins = ()=>{
	const store = useStore([{ value: 0 }]);
	return /*#__PURE__*/ _jsxSorted(_Fragment, null, null, [
		/*#__PURE__*/ _jsxSorted("button", { on:click: /*#__PURE__*/ qrl(i_onClick, "component_button_onClick", [store]) }, null, "+1", 3, null),
		store.map(function(v, idx) {
			return /*#__PURE__*/ _jsxSorted("div", null, null, ["Function:", _wrapProp(v)], 1, "fn_" + idx);
		}),
		store.map((v, idx)=>/*#__PURE__*/ _jsxSorted("div", null, null, ["Arrow:", _wrapProp(v)], 1, "arrow_" + idx))
	], 1, null);
};


None
/*
{
  "origin": "test.tsx",
  "name": "component_ZUK1E201Ins",
  "entry": null,
  "displayName": "test.tsx_component",
  "hash": "ZUK1E201Ins",
  "canonicalFilename": "test.tsx_component_ZUK1E201Ins",
  "path": "",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    82,
    385
  ]
}
*/
============================= test.tsx ==

import { componentQrl, qrl } from "@qwik.dev/core";
const i_ZUK1E201Ins = ()=>import("./test.tsx_component_ZUK1E201Ins");
export default /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_ZUK1E201Ins, "component_ZUK1E201Ins"));


None
== DIAGNOSTICS ==

[]
