optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_should_convert_jsx_events.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---


		import { component$ } from '@qwik.dev/core';

		const ManyEventsComponent = component$(() => {
			return (
				<div>
					<button
						onClick$={() => {}}
						onDblClick$={() => {}}
					>
						click
					</button>
					<button
						onClick$={() => {}}
						onBlur$={() => {}}
						on-anotherCustom$={() => {}}
						document:onFocus$={() => {}}
						window:onClick$={() => {}}
					>
						click
					</button>
				</div>
			);
		});
		
============================= test.tsx_ManyEventsComponent_component_div_button_on_click_1_hyur9k7tWAQ.js (ENTRY POINT)==

export const ManyEventsComponent_component_div_button_on_click_1_hyur9k7tWAQ = ()=>{};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\"+EAagB,KAAO\"}")
/*
{
  "origin": "test.tsx",
  "name": "ManyEventsComponent_component_div_button_on_click_1_hyur9k7tWAQ",
  "entry": null,
  "displayName": "test.tsx_ManyEventsComponent_component_div_button_on_click_1",
  "hash": "hyur9k7tWAQ",
  "canonicalFilename": "test.tsx_ManyEventsComponent_component_div_button_on_click_1_hyur9k7tWAQ",
  "path": "",
  "extension": "js",
  "parent": "ManyEventsComponent_component_ndbrzxiyG3g",
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": false,
  "loc": [
    252,
    260
  ]
}
*/
============================= test.js ==

import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const i_ndbrzxiyG3g = ()=>import("./test.tsx_ManyEventsComponent_component_ndbrzxiyG3g");
/*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_ndbrzxiyG3g, "ManyEventsComponent_component_ndbrzxiyG3g"));


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;cAG8B\"}")
============================= test.tsx_ManyEventsComponent_component_div_button_on_dblclick_3LGCXD09H1w.js (ENTRY POINT)==

export const ManyEventsComponent_component_div_button_on_dblclick_3LGCXD09H1w = ()=>{};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\"gFAQmB,KAAO\"}")
/*
{
  "origin": "test.tsx",
  "name": "ManyEventsComponent_component_div_button_on_dblclick_3LGCXD09H1w",
  "entry": null,
  "displayName": "test.tsx_ManyEventsComponent_component_div_button_on_dblclick",
  "hash": "3LGCXD09H1w",
  "canonicalFilename": "test.tsx_ManyEventsComponent_component_div_button_on_dblclick_3LGCXD09H1w",
  "path": "",
  "extension": "js",
  "parent": "ManyEventsComponent_component_ndbrzxiyG3g",
  "ctxKind": "eventHandler",
  "ctxName": "onDblClick$",
  "captures": false,
  "loc": [
    179,
    187
  ]
}
*/
============================= test.tsx_ManyEventsComponent_component_div_button_on_click_CA5nym40iWI.js (ENTRY POINT)==

export const ManyEventsComponent_component_div_button_on_click_CA5nym40iWI = ()=>{};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\"6EAOgB,KAAO\"}")
/*
{
  "origin": "test.tsx",
  "name": "ManyEventsComponent_component_div_button_on_click_CA5nym40iWI",
  "entry": null,
  "displayName": "test.tsx_ManyEventsComponent_component_div_button_on_click",
  "hash": "CA5nym40iWI",
  "canonicalFilename": "test.tsx_ManyEventsComponent_component_div_button_on_click_CA5nym40iWI",
  "path": "",
  "extension": "js",
  "parent": "ManyEventsComponent_component_ndbrzxiyG3g",
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": false,
  "loc": [
    150,
    158
  ]
}
*/
============================= test.tsx_ManyEventsComponent_component_div_button_on_document_focus_aDM7g9k5A3M.js (ENTRY POINT)==

export const ManyEventsComponent_component_div_button_on_document_focus_aDM7g9k5A3M = ()=>{};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\"sFAgByB,KAAO\"}")
/*
{
  "origin": "test.tsx",
  "name": "ManyEventsComponent_component_div_button_on_document_focus_aDM7g9k5A3M",
  "entry": null,
  "displayName": "test.tsx_ManyEventsComponent_component_div_button_on_document_focus",
  "hash": "aDM7g9k5A3M",
  "canonicalFilename": "test.tsx_ManyEventsComponent_component_div_button_on_document_focus_aDM7g9k5A3M",
  "path": "",
  "extension": "js",
  "parent": "ManyEventsComponent_component_ndbrzxiyG3g",
  "ctxKind": "eventHandler",
  "ctxName": "document:onFocus$",
  "captures": false,
  "loc": [
    347,
    355
  ]
}
*/
============================= test.tsx_ManyEventsComponent_component_ndbrzxiyG3g.js (ENTRY POINT)==

import { _jsxSorted } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const i_3LGCXD09H1w = ()=>import("./test.tsx_ManyEventsComponent_component_div_button_on_dblclick_3LGCXD09H1w");
const i_8pmEDy6ivKE = ()=>import("./test.tsx_ManyEventsComponent_component_div_button_on_another_custom_8pmEDy6ivKE");
const i_CA5nym40iWI = ()=>import("./test.tsx_ManyEventsComponent_component_div_button_on_click_CA5nym40iWI");
const i_ZXch3Eg0VPI = ()=>import("./test.tsx_ManyEventsComponent_component_div_button_on_blur_ZXch3Eg0VPI");
const i_aDM7g9k5A3M = ()=>import("./test.tsx_ManyEventsComponent_component_div_button_on_document_focus_aDM7g9k5A3M");
const i_hyur9k7tWAQ = ()=>import("./test.tsx_ManyEventsComponent_component_div_button_on_click_1_hyur9k7tWAQ");
const i_y8X1lHNYirk = ()=>import("./test.tsx_ManyEventsComponent_component_div_button_on_window_click_y8X1lHNYirk");
export const ManyEventsComponent_component_ndbrzxiyG3g = ()=>{
    return /*#__PURE__*/ _jsxSorted("div", null, null, [
        /*#__PURE__*/ _jsxSorted("button", null, {
            "on:click": /*#__PURE__*/ qrl(i_CA5nym40iWI, "ManyEventsComponent_component_div_button_on_click_CA5nym40iWI"),
            "on:dblclick": /*#__PURE__*/ qrl(i_3LGCXD09H1w, "ManyEventsComponent_component_div_button_on_dblclick_3LGCXD09H1w")
        }, "click", 3, null),
        /*#__PURE__*/ _jsxSorted("button", null, {
            "on:click": /*#__PURE__*/ qrl(i_hyur9k7tWAQ, "ManyEventsComponent_component_div_button_on_click_1_hyur9k7tWAQ"),
            "on:blur": /*#__PURE__*/ qrl(i_ZXch3Eg0VPI, "ManyEventsComponent_component_div_button_on_blur_ZXch3Eg0VPI"),
            "on:another-custom": /*#__PURE__*/ qrl(i_8pmEDy6ivKE, "ManyEventsComponent_component_div_button_on_another_custom_8pmEDy6ivKE"),
            "on-document:focus": /*#__PURE__*/ qrl(i_aDM7g9k5A3M, "ManyEventsComponent_component_div_button_on_document_focus_aDM7g9k5A3M"),
            "on-window:click": /*#__PURE__*/ qrl(i_y8X1lHNYirk, "ManyEventsComponent_component_div_button_on_window_click_y8X1lHNYirk")
        }, "click", 3, null)
    ], 3, "u6_0");
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;;;;;yDAGyC;IACtC,qBACC,WAAC;sBACA,WAAC;YACA,UAAQ;YACR,aAAW;WACX;sBAGD,WAAC;YACA,UAAQ;YACR,SAAO;YACP,mBAAiB;YAHlB,mBAQS;YART,iBAQS;WAFR;;AAKJ\"}")
/*
{
  "origin": "test.tsx",
  "name": "ManyEventsComponent_component_ndbrzxiyG3g",
  "entry": null,
  "displayName": "test.tsx_ManyEventsComponent_component",
  "hash": "ndbrzxiyG3g",
  "canonicalFilename": "test.tsx_ManyEventsComponent_component_ndbrzxiyG3g",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    91,
    444
  ]
}
*/
============================= test.tsx_ManyEventsComponent_component_div_button_on_another_custom_8pmEDy6ivKE.js (ENTRY POINT)==

export const ManyEventsComponent_component_div_button_on_another_custom_8pmEDy6ivKE = ()=>{};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\"sFAeyB,KAAO\"}")
/*
{
  "origin": "test.tsx",
  "name": "ManyEventsComponent_component_div_button_on_another_custom_8pmEDy6ivKE",
  "entry": null,
  "displayName": "test.tsx_ManyEventsComponent_component_div_button_on_another_custom",
  "hash": "8pmEDy6ivKE",
  "canonicalFilename": "test.tsx_ManyEventsComponent_component_div_button_on_another_custom_8pmEDy6ivKE",
  "path": "",
  "extension": "js",
  "parent": "ManyEventsComponent_component_ndbrzxiyG3g",
  "ctxKind": "eventHandler",
  "ctxName": "on-anotherCustom$",
  "captures": false,
  "loc": [
    312,
    320
  ]
}
*/
============================= test.tsx_ManyEventsComponent_component_div_button_on_window_click_y8X1lHNYirk.js (ENTRY POINT)==

export const ManyEventsComponent_component_div_button_on_window_click_y8X1lHNYirk = ()=>{};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\"oFAiBuB,KAAO\"}")
/*
{
  "origin": "test.tsx",
  "name": "ManyEventsComponent_component_div_button_on_window_click_y8X1lHNYirk",
  "entry": null,
  "displayName": "test.tsx_ManyEventsComponent_component_div_button_on_window_click",
  "hash": "y8X1lHNYirk",
  "canonicalFilename": "test.tsx_ManyEventsComponent_component_div_button_on_window_click_y8X1lHNYirk",
  "path": "",
  "extension": "js",
  "parent": "ManyEventsComponent_component_ndbrzxiyG3g",
  "ctxKind": "eventHandler",
  "ctxName": "window:onClick$",
  "captures": false,
  "loc": [
    380,
    388
  ]
}
*/
============================= test.tsx_ManyEventsComponent_component_div_button_on_blur_ZXch3Eg0VPI.js (ENTRY POINT)==

export const ManyEventsComponent_component_div_button_on_blur_ZXch3Eg0VPI = ()=>{};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\"4EAce,KAAO\"}")
/*
{
  "origin": "test.tsx",
  "name": "ManyEventsComponent_component_div_button_on_blur_ZXch3Eg0VPI",
  "entry": null,
  "displayName": "test.tsx_ManyEventsComponent_component_div_button_on_blur",
  "hash": "ZXch3Eg0VPI",
  "canonicalFilename": "test.tsx_ManyEventsComponent_component_div_button_on_blur_ZXch3Eg0VPI",
  "path": "",
  "extension": "js",
  "parent": "ManyEventsComponent_component_ndbrzxiyG3g",
  "ctxKind": "eventHandler",
  "ctxName": "onBlur$",
  "captures": false,
  "loc": [
    277,
    285
  ]
}
*/
== DIAGNOSTICS ==

[]
